kubernetes/apps/identity/kanidm/instance/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kanidm
spec:
  hostnames:
    - auth.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: kanidm
          port: 8443
